fixed alignment for mobile

--- a/Home.css
+++ b/Home.css
@@ -1,5 +1,5 @@
  .u-section-1 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.25), rgba(0,0,0,0.25)), url("images/-min-7.jpg");
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.25), rgba(0,0,0,0.25)), url("images/-min-9.jpg");
   background-position: 63.21% 50%;
 }
 
@@ -46,17 +46,16 @@
 
 @media (max-width: 1199px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 774px;
+    min-height: 670px;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 693px;
+    min-height: 513px;
   }
 
   .u-section-1 .u-text-1 {
-    font-size: 3.4375rem;
     width: 720px;
   }
 
@@ -67,13 +66,12 @@
 
 @media (max-width: 767px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 621px;
+    min-height: 385px;
   }
 
   .u-section-1 .u-text-1 {
-    font-size: 3rem;
     width: 540px;
-    margin-top: 90px;
+    font-size: 3.75rem;
   }
 
   .u-section-1 .u-text-2 {
@@ -83,13 +81,12 @@
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 590px;
+    min-height: 242px;
   }
 
   .u-section-1 .u-text-1 {
-    font-size: 2.125rem;
     width: 340px;
-    margin-top: 60px;
+    font-size: 3rem;
   }
 
   .u-section-1 .u-text-2 {
@@ -352,7 +349,7 @@
 
 @media (max-width: 575px) {
   .u-section-2 .u-sheet-1 {
-    min-height: 622px;
+    min-height: 1028px;
   }
 
   .u-section-2 .u-text-1 {
@@ -361,7 +358,7 @@
 
   .u-section-2 .u-image-1 {
     min-height: 441px;
-    margin-top: 170px;
+    margin-top: 420px;
     margin-right: initial;
     margin-left: initial;
     width: auto;
@@ -369,6 +366,7 @@
 
   .u-section-2 .u-image-2 {
     height: 340px;
+    margin-top: -719px;
     margin-right: initial;
     margin-left: initial;
     width: auto;
@@ -376,12 +374,30 @@
 
   .u-section-2 .u-list-1 {
     width: 259px;
-    margin-top: 123px;
+    margin-top: -104px;
+    height: auto;
   }
 
   .u-section-2 .u-repeater-1 {
-    grid-template-columns: repeat(1, 100%);
-    min-height: 844px;
+    grid-template-columns: 100%;
+    min-height: 721px;
+    grid-gap: 33px 33px;
+  }
+
+  .u-section-2 .u-container-layout-2 {
+    padding-top: 0;
+  }
+
+  .u-section-2 .u-container-layout-3 {
+    padding-top: 0;
+  }
+
+  .u-section-2 .u-container-layout-4 {
+    padding-top: 0;
+  }
+
+  .u-section-2 .u-container-layout-5 {
+    padding-top: 0;
   }
 } .u-section-3 {
   background-image: none;
@@ -564,18 +580,21 @@
   .u-section-3 .u-image-1 {
     width: 340px;
     height: 325px;
-    margin-top: -194px;
+    margin-top: -317px;
   }
 
   .u-section-3 .u-group-1 {
     min-height: 519px;
     width: 274px;
-    margin-top: -864px;
+    margin-top: -741px;
     margin-right: calc(((100% - 340px) / 2) + 17px);
   }
 
   .u-section-3 .u-text-3 {
-    margin-left: calc(((100% - 340px) / 2) + 19px);
+    width: auto;
+    margin-top: -569px;
+    margin-left: auto;
+    margin-bottom: 60px;
   }
 } .u-section-4 {
   background-image: none;
@@ -740,6 +759,7 @@
   }
 
   .u-section-4 .u-image-1 {
+    margin-top: 743px;
     height: 340px;
     margin-right: initial;
     margin-left: initial;
@@ -747,7 +767,7 @@
   }
 
   .u-section-4 .u-list-1 {
-    margin-top: -548px;
+    margin-top: -1006px;
     width: auto;
     margin-right: initial;
     margin-left: initial;
@@ -1235,6 +1255,10 @@
   .u-section-6 .u-repeater-1 {
     grid-template-columns: repeat(2, calc(50% - 15px));
   }
+
+  .u-section-6 .u-text-13 {
+    margin-top: 20px;
+  }
 }
 
 @media (max-width: 767px) {
@@ -1244,6 +1268,10 @@
 
   .u-section-6 .u-repeater-1 {
     grid-template-columns: repeat(1, 100%);
+  }
+
+  .u-section-6 .u-text-13 {
+    margin-top: -716px;
   }
 }
 
